samples/_failures_safe/1761311119_140580_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab87c7d8.c: In function ‘init_parser’:
./samples/SAFE/__tmp_ab87c7d8.c:148:5: error: expected expression at end of input
  148 |     if (parser ==
      |     ^~
./samples/SAFE/__tmp_ab87c7d8.c:148:5: error: expected declaration or statement at end of input
